@@ -1,3 +1,7 @@
+2020-05-29  Michal Hoftich  <michal.h21@gmail.com>
+
+	* index.html: added back info about htlatex.
+
 2020-05-28  Michal Hoftich  <michal.h21@gmail.com>
 
 	* index.html: use make4ht instead of htlatex.
